--- a/mac-components/Brewfile
+++ b/mac-components/Brewfile
@@ -14,3 +14,8 @@ install nginx
 install node
 install mongodb
 install hub
+install pow
+install rbenv
+install rbenv-gem-rehash
+install ruby-build
+install rbenv-default-gems
